# GESTION-BUDGETAIRE

./: .replit  clients.csv  config_securite.csv  depenses_epargne.csv  historique_budget.csv  historique_complet.csv  index.html  main.py  manifest.json  pyproject.toml  requirements.txt  sys_config.csv
.github/workflows/: keep_alive.yml
artifacts/mockup-sandbox/: package-lock.json
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/expense-variants/: Cockpit.tsx  Envelope.tsx  ReportCard.tsx  Wizard.tsx
